--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,6 +23,23 @@ a {	text-decoration: none; }
 	display: flex;
 	align-items:center;
 }
+.video-responsive {
+position: relative;
+padding-bottom: 56.25%; /* 16/9 ratio */
+padding-top: 30px; /* IE6 workaround*/
+height: 0;
+overflow: hidden;
+}
+
+.video-responsive iframe,
+.video-responsive object,
+.video-responsive embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
 
 .tarjeta {
 	margin:40px 0;
