--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,23 +22,15 @@ a {	text-decoration: none; }
 	height: 100%;
 	display: flex;
 	align-items:center;
+	
 }
-.video-responsive {
-position: relative;
-padding-bottom: 56.25%; /* 16/9 ratio */
-padding-top: 30px; /* IE6 workaround*/
-height: 0;
-overflow: hidden;
-}
-
-.video-responsive iframe,
-.video-responsive object,
-.video-responsive embed {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+	.contenedor iframe,
+	.contenedor object,
+	.contenedor embed,
+	.contenedor video {
+		height: auto;	
+		max-width: 400%;
+		width: 100%;
 }
 
 .tarjeta {
