--- a/css/estilos.css
+++ b/css/estilos.css
@@ -166,7 +166,7 @@ a {	text-decoration: none; }
 }
 
 .slider_info .informacion .texto {
-	color: #55acee;
+	color: #000000;
 	font-size: 18px;
 	line-height: 24px;
 }
